# customer-success

./: .env.sample  .gitignore  .pages  404.html  README.md  compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  postAttach.sh
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: batch-email-requests.yml  cohort-request.yml  crm-record-update.yml  deals-pipelines-request-form.yml  feature-request-form.yml  feature-request.yml  feature_request.md  feature_request_question.md  new-user_request_form.yml  outreach-campaign-request  outreach-campaign-request.yml  property-request-form.yml  property_request.md  question-request-form.yml  reporting_request.md  reporting_request_form.yml
.github/workflows/: close-crm-update.yml  export-hubspot-data.yml  generate-qr-code.yml  mkdocs-preview.yml  mkdocs.yml  monthly-d5-issue.yml  monthly-report-issue.yml  new-user-notify-slack.yml  notes-sync.yml  quarterly-report-issue.yml
admin/: index.html
admin/CRM Maintenance/: index.html
admin/crm-properties/: index.html
admin/imports/: index.html
admin/records/: index.html
admin/reports/: index.html
admin/zapier/: index.html
automations/: index.html
automations/types of automations/: index.html
contacts/: .pages  index.html
contacts/contacts-custom-properties/: index.html
contacts/email-identifier/: index.html
conversations/: .pages  index.html
conversations/add-a-comment/: index.html
conversations/associate-conversation/: index.html
conversations/close-reopen/: index.html
conversations/connect-new-inbox/: index.html
conversations/conversations/: index.html
conversations/send-an-email/: index.html
data/: export.py  objects.py  utils.py
data/hubspot/: tickets.schema.json
desk-to-hubspot/: README.md  convert.ipynb  requirements.txt
docs/: README.md
docs/admin/: CRM Maintenance.md  README.md  crm-properties.md  data-ingest.md  imports.md  records.md  reports.md  zapier.md
docs/automations/: README.md  automations.md  types of automations.md
docs/contacts/: .pages  README.md  activity.md  contacts-custom-properties.md  email-identifier.md  logging-emails.md
docs/conversations/: README.md  add-a-comment.md  associate-conversation.md  close-reopen.md  connect-new-inbox.md  conversations.md  send-an-email.md
docs/getting-started/: .pages  .pages.yml  README.md  account-setup.md  email-setup.md  key-terms.md  purpose.md  what-is-a-CRM.md
docs/marketing/: README.md  forms.md  marketing.md
docs/sales/: README.md  deal-pipelines.md
docs/service/: .pages  README.md  assign-a-ticket.md  feedback surveys.md  service.md
getting-started/: index.html
getting-started/account-setup/: index.html
hubspot/: notes.ipynb  vendor_activities.ipynb
marketing/: index.html
notebooks/: README.md  benefits_emails.ipynb  full_export.ipynb  notes.ipynb  properties.ipynb  vendor_activities.ipynb
notes/: README.md  __init__.py  download.py  post.py
qr_codes/: README.md  requirements.txt
sales/: index.html
search/: search_index.json
service/: .pages  index.html
vendors/: activities.ipynb
(+33 files in other folders)
